* Added Estonian calendar - holidays.et.xml (from Harry-Anton Talvik)
* Added Lyricsfind search by Steve Heil

New Searches

* txp - Search the tweak database on tweakxp.com (from Wolfgang Deutsch)
* chmodconv - convert chmod numbers to strings and vice versa (from Brent Beardsley)
* bb - Search BestBuy (from Glenn Carr)
* lipsum - Generate Lorem Ipsum text (from Glenn Carr)

Modified Searches

* amaz - added domain switch to search either amaz. com de uk jp ca or fr (from Wolfgang Deutsch)
* sf - added exact and foundry switches for requiring all words and going to a foundry page (from Brent Beardsley)
* tinyurl - changed example so it wouldn't wrap
* mac - added help display if a question mark or no args are specified

Bug Fixes

* Depending on the configured editor, spaces in the config file path would cause problems.  Fix by quoting filename.
* Fix from Gregg Tavares for "[ 643945 ] Does not run in Japanese Windows":
  http://sourceforge.net/tracker/index.php?func=detail&aid=643945&group_id=42081&atid=432066


-- What's new for 3.1.4.4 beta (October 24, 2002)

New Searches

* fandango - Find movie information, listings, and buy tickets online (from Nikolai Devereaux)

Modified Searches

* php - fix problem with spaces in URL (from Nikolai Devereaux)
* sf - add "/list" for jumping to a SourceForge hosted list info/admin page (from Glenn Carr)

Bug Fixes

* Popup menu fix - 'Configure' was showing up in the list of search categories


-- What's new for 3.1.4.3 beta (October 23, 2002)

New aliases

* dhr and w3r, from Glenn Carr and Will Dean

New Searches

* cheapcd - Buy Cheap CDs Online at Wholesale Cost, $5 under Retail (from Steven J. Heil)
* md5 - calculate an md-5 digest for a string (from Brent Beardsley)
* tgn - Search the Getty Thesaurus of Geographical Names (from Tim Aiello)
* arin - Search the Arin Whois database at www.arin.net/whois (from Tim Aiello)
* ubl - the Ultimate Band List by ArtistDirect (from Darren Greenberg)